Fixed tests to throw correct Exceptions